--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
+    "seed": "tsx scripts/seed.ts",
     "start": "tsx index.ts"
   },
   "type": "module",
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
+    "drizzle-orm": "^0.43.1",
     "fastify": "^5.3.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.15.17",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
